src2/objects/Attribute_Domain__c.object
<CustomObject>
    <fields>
        <fullName>Attribute_Domain_UUID__c</fullName>
        <externalId>true</externalId>
        <label>Attribute Domain UUID</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Domain_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Domain Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Attribute_Domain__c.Type__c</field>
                <operation>equals</operation>
                <value>TYPE</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Attribute_Domain__c</referenceTo>
        <relationshipLabel>Attribute Domains (Domain Type)</relationshipLabel>
        <relationshipName>Attribute_Domains1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Language_Key_Code__c</fullName>
        <label>Language Key Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Type_Type__c</fullName>
        <formula>Domain_Type__r.Parent_Value__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Type Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Value_Type__c</fullName>
        <formula>Parent_Value__r.Domain_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Value Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Value__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Value</label>
        <referenceTo>Attribute_Domain__c</referenceTo>
        <relationshipLabel>Attribute Domains</relationshipLabel>
        <relationshipName>Attribute_Domains</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Org_Code__c</fullName>
        <label>Sales Organization</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sales_Organization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Attribute Domain</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Domain_Type__c</columns>
        <columns>Type__c</columns>
        <columns>Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Attribute Domain Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attribute Domains</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Check_Parent_Type</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Parent_Type_Type__c ==Parent_Value_Type__c, false, true)</errorConditionFormula>
        <errorMessage>Please set the correct Attribute Type</errorMessage>
    </validationRules>
</CustomObject>